styles/styles.css
:root {
  --branding-color: #006269;
  --secondary-color: #64B6AC;
  --tertiary-color:#DFEEEC;
  --accent-color:#EF8557;
  --anthracite: #393D47;
  --heading-font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
  --default-font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
}
  
 .jobs {
    display: flex;
    gap:10px;
    @media (max-width: 1080px){
      flex-direction: column;
    }
  }

  article {
    background-color: var(--branding-color);
    padding: 25px;
    border-radius: 10px;
    flex:1;
    }

  article h3 {
    margin-top: 20px;
    margin-bottom: 10px;
    }

  article div {
    font-weight: 600;
    margin-bottom: 5px;
    color: var(--branding-color)
    }

  article p {
    margin-bottom: 10px;
    color: var(--tertiary-color);
    }

  figure {
    width: 100%;
    padding-top:56.25%;
    overflow: hidden;
    position: relative;
    border-radius: 10px;
    }

    figure img {
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      object-fit: cover;
      transition: ease 3s all;
      }

    figure figcaption {
      position: absolute;
      bottom:0;
      left: 0;
      right: 0;
      background-color: rgba(00,62,69,0.7);
      color: var(--tertiary-color);
      text-align: center;
      padding: 10px;
      opacity:0;
      visibility: hidden;
      transition: ease 0.3s all;
      }

      figure:hover figcaption  {
      opacity: 1;
      visibility: visible;
      transform: 1.2;  
   }

      figure:hover img {
        transform: scale(1.2);
      transition: transform 1s ease;
    }
  


body {
   background-color: var(--off-white);
   overflow-x: hidden;
}

h1, 
h2,
h3,
h4, 
h5,
h6 {
font-family: var(--heading-font-family);
color: var(--branding-color);
font-weight: bold;
}

h1 {
  font-size: 78px;
  font-weight: bold;  
}

h2 {
  font-size:36px;
}

h3{
  font-size: 48px;
}

p {
font-family: var(--default-font-family);
font-weight: normal;
font-size:16px;
line-height: 1.4em;
}

.detail-link{
  color:var(--tertiary-color);
} 

a {
  color: var(--branding-color);
}

.email {
  color: var(--tertiary-color);
}

.footer-info {
  background-color: var(--branding-color);
  color: var(--tertiary-color);
  padding: 30px 0px;
}

.footer-info a {
  color: var(--tertiary-color);
  text-decoration: none;
}

.footer-info li {
  list-style-type: none;
}

.footer-credit {
  color: var(--tertiary-color);
  font-size: 12px;
}

.fa-arrow-right {
  padding: 0 6px;
}

a:hover {
  color: var(--secondary-color);
}

.subtitle {
  font-size: 36px;
  color: var(--tertiary-color);
}

.container {max-width: 1080px;
}

.content-container {
  padding: 30px 20px;
}

.content {
  margin: 30px;
}

.content h1 {
  font-size: 64px;
  line-height: 85px;
  color: var(--tertiary-color);
}

.content h2 {
  font-family: var(--default-font-family);
  color: var(--tertiary-color);
  font-size: 18px;
}

.content h3 {
  font-family: var(--default-font-family);
  font-size: 24px;
  line-height: 1,5;
  margin: 20px 0 0;
}

.content p {
  font-size: 14px;
  font-family: var(--default-font-family) ;
  color:#DFEEEC;
}

.about-section p {
  font-style:normal;
  color: var(--tertiary-color);
}

.content-container img {
  border-radius: 8px;
  width: 320px;
  margin: 30px;
}

.portfolio   {
  background-color: var(--tertiary-color);
}    

.hero {
  background: var(--branding-color);
  min-height:90vh;
  text-align: left;
  padding: 100px 20px;
  background-image: linear-gradient(to bottom right, var(--branding-color), var(--tertiary-color));
}

.hero h1{
  font-size: 52px;
  font-weight: bold;
}

.hero h2 {
  font-family: var(--default-font-family);
  font-weight: normal;
  font-size: 30px;
}

.hero p {
  font-weight: bold;
  font-size: 36px;
  margin:0px;
  color: #272142;
}
      
.btn {
  font-family: var(--default-font-family);
}

.btn-branding {
  background-color: var(--secondary-color);
  border-radius: 4;
  color: var(--branding-color);
  font-size: 18px;
  line-height: 20px;
  padding: 10px 20px;
  box-shadow: 2px 2px 5px rgba(29, 28, 28, 0.5);
}

 .btn-branding:hover {
  background: var(--branding-color);
  color: var(--secondary-color);
  transition: 150ms all ease-in-out;
}

.btn-branding-outline {
  background-color: var(--secondary-color);
  border: 2px solid var(--branding-color);
  color: var(--branding-color);
    border-radius: 4;
    font-size: 18px;
    line-height: 27px;
    padding: 15px 30px;
}

.project-description {
  padding: 60px 60px;
}

.logo {
  max-height: 40px;
}

.tools {
  font-size: 18px;
  text-align: center;
  color: var(--tertiary-color);
}

.tools i {
  font-size: 20px;
  color: var(--tertiary-color);
}

.tools img {
  max-width: 24px;
  color: var(--tertiary-color);
}

.profile-photo {
  display: block; 
  margin: auto;
  max-width: 300px;
}

.anchor{
  padding-top:70px;
}

.devices-img {
  display: block;
  margin: auto;
  max-width: 550px;
}
.offer {  
  color: var(--tertiary-color);
  font-family: var(--default-font-family);
  border-radius: 10px;
  padding: 0px 25px;
}

.overview {
  font-family: var(--default-font-family);
  color: #DFEEEC;
}

.services-title {
  font-size: 24px;
  color: var(--branding-color)
}

.services {
  color: var(--branding-color);
  background-image: linear-gradient(to bottom right, var(--secondary-color), var(--tertiary-color));
  font-family: var(--default-font-family);
  border-radius: 10px;
  padding: 10px 25px 15px;
  border: solid 2px var(--branding-color);
}

.icon-dark {
  font-size: 48px;
  padding: 20px;
}

.tiny-tag span{
  font-size: 14px;
  text-align: center;
  background-color: var(--secondary-color);
  color:var(--branding-color);
  border-radius: 20px;
  line-height: 1.2;
  padding: 2px 3px;
  margin: 3px;
}

.tiny-tag icon {
  font-size: 12px;
}

.ginkgo  {
  max-height:250px;
  rotate: 45deg;
  margin-left: 150px;
}

.summary, .details {
  color:var(--tertiary-color);
}


.testimonial {
  background-color: var(--branding-color);
  color: var(--tertiary-color);
  font-family: var(--default-font-family);
  margin: 10px;
  border-radius: 10px;
  font-size: 14px; 
}

.testimonial-background {
  background-color: var(--branding-color);
}

.example {
  color: var(--branding-color);
  font-family: var(--default-font-family);
  border-radius: 10px;
  font-size: 14px;
  border: solid 1px var(--branding-color);
  
}


.testimonial-title {
  font-size: 24px;
}

.testimonial-title a {
  text-decoration: none;
}

.testimonial a {
  color: var(--tertiary-color);
}

.quote-mark {
  font-size: 26px;
}



body {
  background-color: var(--branding-color);
}

footer {
  background-color:var(--primary-color);
}

footer li {
font-family: var(--default-font-family);
font-size: 14px;
font-weight: 400;
}

footer p {
  font-size: 14px;
  color: var(--branding-color);
}


.contact-box {
  background-image: linear-gradient(to bottom right, var(--secondary-color), var(--tertiary-color));
  padding: 30px 30px;
  border-radius: 10px ;
  color: var(--branding-color);
}

.quote {
  color: var(--tertiary-color);
}

.quote  a:hover {
  color: var(--tertiary-color);
}

footer .email-link {
  text-decoration: none;
  color:black;
  font-size:24px;
}

footer .email-link:hover{
  color:var(--secondary-color);
}

footer .social-links a {
  margin: 0 20px;
  font-size: 18px;
  color: var(--branding-color);
  background: var(--secondary-color);
  padding: 10px 14px;
  border-radius: 50%;
  transition: all 100ms ease-in-out;
}

footer .social-links a:hover{
  color: var(--secondary-color);
  background: var(--branding-color);
}

nav {
  padding:20px 0;
  font-family: var(--default-font-family);
}

nav ul {
  padding:0;
  margin:0;
}
nav li{
  display:inline;
  list-style: none;
  line-height: 42px;
  margin-left: 15px;
}

.navbar {
  background-color: var(--branding-color) !important;
}


.nav-item a {
  text-decoration: none;
  color: var(--tertiary-color);
  transition: all 100ms ease-in-out;
  }


.nav-item a:hover {
  color: var(--secondary-color); 
}

.nav-item a:active {
  color: var(--secondary-color);
}

nav .btn-branding {
  padding: 8px 30px;
  font-size: 16px;
}

@media (max-width:960px) {
  h1 {
    font-size: 60px;
    line-height: 1,5;
  }
  h2{
    font-size: 44px;
  }

  h3 {
    font-size: 26px;
  }

  .sidebar{
    background-color: var(--branding-color);
  }

  .offcanvas-title {
    color:var(--tertiary-color);
  }

.project-description{
  padding: 0;
  text-align:center;
}
.content-container {
  padding:0;
}
}

